--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="d-flex justify-content-around align-self-center desktop-only-im" href=""><img src="./static/DHR_squared.png" alt="Dominik, myself as a portrait for business" style="width: 50%;" /></a>
               <div id="titel-text" class="text-center mt-3">
                 <h4>Dominik Höhr</h4>
-                <span>Student | DevOps @ CGI</span>
+                <span>Lead Consultant @ CGI</span>
               </div>
               <a id="nav-icon" class="mobile-only" onclick="toggleMobileMenu()"><i class="fa-solid fa-bars"></i></a>
             </div>
@@ -77,7 +77,7 @@
                 <div class="col heading">
                   <h1>Über mich, <color>Dominik Höhr</color></h1>
                   <div class="line-dec long-line"></div>
-                  <p>Ich bin Dominik Höhr, <span id="yearOutput"></span> Jahre alt, Student der Wirtschaftsinformatik an der Universität Paderborn und <br />Cloud- & DevOps-Engineer @ CGI.</p>
+                  <p>Ich bin Dominik Höhr, <span id="yearOutput"></span> Jahre alt, Lead Consultant | Cloud- & DevOps-Engineer @ CGI.</p>
                 </div>
               </div>
               <div class="row">
@@ -91,7 +91,7 @@
                         Meine Leidenschaft gilt der Entwicklung moderner, verteilter Systeme und der Automatisierung von Prozessen.<br /> 
                         Mein Ziel ist es, technische Lösungen nicht nur effizient, sondern auch wirtschaftlich sinnvoll zu gestalten.<br /> 
                         <br />
-                        Aktuell studiere ich im 7. Semester des Master of Science Wirtschaftsinformatik und arbeite als Cloud und DevOps-Engineer im IT Consulting.
+                        Nach meinem Studium Master of Science Wirtschaftsinformatik arbeite ich nun als Cloud und DevOps-Engineer im IT Consulting.
                       </p>
                     </div>
                   </div>
@@ -156,7 +156,7 @@
                       </div>
                       <h4>Entwicklungs- und Buildprozess</h4>
                       <div class="skill-list">
-                        <span title="git, GitLab, CI/CD"><i class="fas fa-code-branch"></i></span>
+                        <span title="git, GitLab, CI/CD, Azure DevOps"><i class="fas fa-code-branch"></i></span>
                         <span title="Kubernetes, Helm"><i class="fas fa-cube"></i></span>
                         <span title="Terrafom, Ansible"><i class="fas fa-cogs"></i></span>
                         <span title="docker, docker compose"><i class="fab fa-docker"></i></span>
@@ -183,13 +183,13 @@
                       <h4>Projektmanagement</h4>
                       <div class="skill-list">
                         <span title="SCRUM"><i class="fas fa-tasks"></i></span>
-                        <span title="Projektmanagement"><i class="fas fa-project-diagram"></i></span>
-                        <span title="Risikomanagement"><i class="fas fa-exclamation-triangle"></i></span>
+                        <span title="Projekt- und Risikomanagement"><i class="fas fa-project-diagram"></i></span>
+                        <!-- <span title="Risikomanagement"><i class="fas fa-exclamation-triangle"></i></span> -->
+                        <span title="DevOps"><i class="fas fa-sync-alt"></i></span>
                       </div>
                       <h4>Modellierung</h4>
                       <div class="skill-list">
-                        <span title="Business Process Model and Notation 2.0"><i class="fab" style="font-size: small;">BPMN</i></span>
-                        <span title="Erweiterte Ereignisgesteuerte Prozesskette"><i class="fab" style="font-size: small;">eEPK</i></span>
+                        <span title="Business Process Model and Notation 2.0 / Erweiterte Ereignisgesteuerte Prozesskette"><i class="fab" style="font-size: small;">BPMN/eEPK</i></span>
                         <span title="Datenbank Modellierung und Normalisierung"><i class="fas fa-database"></i></span>
                       </div>
                       <h4>Tools</h4>
@@ -202,8 +202,10 @@
                       </div>
                       <h4>Weitere</h4>
                       <div class="skill-list">
-                        <span title="Social Media Understanding"><i class="fas fa-hashtag"></i></span>
-                        <span title="Microsoft 365"><i class="fab fa-microsoft"></i><small style="position: absolute; width: 80px">Insb. Flow, Sharepoint und AD</small></span>
+                        <!-- <span title="Social Media Understanding"><i class="fas fa-hashtag"></i></span> -->
+                        <span title="Cloud Architektur"><i class="fas fa-cloud"></i></span>
+                        <span title="Private and Sovereign Cloud"><i class="fas fa-shield-alt"></i></span>
+                        <span title="Microsoft 365"><i class="fab fa-microsoft"></i><small style="position: absolute; width: 80px">Insb. Flow, Sharepoint und AD/EntraID</small></span>
                       </div>
                     </figcaption>
                   </figure>
@@ -213,7 +215,7 @@
                 <div class="col text-center">
                   <div class="spacer"></div>
                   <p>
-                    Nachweise zu meinen Zertifikaten finden Sie bei <a href="https://learn.microsoft.com/de-de/users/dominik-hoehr"><i class="fab fa-microsoft"></i> Microsoft Learn</a><!-- und <a href="https://www.credly.com/users/dominik-hoehr"><i class="fa fa-certificate"></i> Credly</a>-->.
+                    Einen Überblick über meine Trainings und Zertifizierungen finden Sie unter anderem bei <a href="https://learn.microsoft.com/de-de/users/dominik-hoehr"><i class="fab fa-microsoft"></i> Microsoft Learn</a> und gerne auf Nachfrage<!-- und <a href="https://www.credly.com/users/dominik-hoehr"><i class="fa fa-certificate"></i> Credly</a>-->.
                   </p>
                 </div>
               </div>
@@ -414,9 +416,8 @@
                 <div class="col heading">
                   <h2>Erfahrung</h2>
                   <div class="line-dec"></div>
-                  <span>Aktuell Teilzeit als Cloud- und DevOps-Engineer und Student</span>
+                  <span>Aktuell Vollzeit Lead Consultant als Cloud- und DevOps-Engineer</span>
                   <br /> <br />
-                  <p>Ich suche stetig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden und zu erweitern sowie meine Erfahrungen aus der Praxis gewinnbringend in effizienten Lösungen Umzusetzen.</p>
                 </div>
               </div>
               <div class="row px-5 cv-isotope-selector">
@@ -440,7 +441,7 @@
               <div class="row career">
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Dezember 2024</div></div>
-                  <h4>Cloud- und DevOps-Engineer</h4>
+                  <h4>Lead Consultant |<br/>Cloud- und DevOps-Engineer</h4>
                   <p><a href="https://www.cgi.com" id="service-place">CGI <i class="fas fa-link"></i></a></p>
                   <i>Entwicklung von leistungsfähigen Cloud-Architekturen mit Fokus auf Sicherheit und automatisierter Bereitstellung</i>
                 </div>
@@ -456,18 +457,12 @@
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Sicherstellung der IT-Infrastruktur und Support</i>
                 </div>
-                <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Mai 2024</div></div>
-                  <h4>Mitglied im Vereinsvorstand</h4>
-                  <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
-                  <i>Unterstützung der Kontinuität und Durchführung der Bundesfachschaften Konferenzen</i>
-                </div>
-                <div class="cv-item volunteer" data-type="volunteer">
+                <!-- <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">April 2024</div></div>
                   <h4>Teilnahme</h4>
                   <p><a href="https://jax.de/" id="service-place">Jax 2024, Die Konferenz für Java, Architektur- und Software-Innovation<i class="fas fa-link"></i></a></p>
                   <i>Entwicklermesse mit Themen über Java API, microservices, GitOps und Quantencomputing</i>
-                </div>
+                </div> -->
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Oktober 2023 bis Oktober 2024</div></div>
                   <h4>Referent für IT</h4>
@@ -487,11 +482,17 @@
                   <i></i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Mai 2023</div></div>
+                  <h4>Mitglied im Vereinsvorstand</h4>
+                  <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
+                  <i>Unterstützung der Kontinuität und Durchführung der Bundesfachschaften Konferenzen</i>
+                </div>
+                <!-- <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Mai 2023 bis Mai 2024</div></div>
                   <h4>Gewählter Vereinsbeirat</h4>
                   <p><a href="https://bufak-wiwi.org/" id="service-place">Verein der BuFaK WiWi e.V. <i class="fas fa-link"></i></a></p>
                   <i>Unterstützung der Kontinuität und Durchführung der Bundesfachschaften Konferenzen</i>
-                </div>
+                </div> -->
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Oktober 2022 bis Oktober 2023</div></div>
                   <h4>Referent für Kultur</h4>
@@ -510,7 +511,7 @@
                   <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a></p>
                 </div>
                 <div class="cv-item graduation" data-type="graduation">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">Seit April 2022</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-graduation-cap fa-3x"></i></div><div class="service-date">April 2022 bis November 2025</div></div>
                   <h4>Studium</h4>
                   <p><a href="https://www.uni-paderborn.de" id="service-place">Universität Paderborn <i class="fas fa-link"></i></a></p>
                   <i>Wirtschaftsinformatik, Master of Science </i>
@@ -534,7 +535,7 @@
                   <i>Konzeptionierung und Realisierung interner Projekte. <br /><div class="spacer"></div> Full-Stack-Entwickler und DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Oktober 2019 bis November 2025</div></div>
                   <h4>Aktives Mitglied</h4>
                   <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a><br/><div class="spacer"></div>Hochschulgruppe Wirtschaftsinformatik Paderborn e.V.</p>
                 </div>
@@ -554,7 +555,7 @@
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date"></div></div>
                   <h4>Teilnahme</h4>
                   <p><a href="https://www.pyddf.de" id="service-place">Python Sprints, Düsseldorf (PyDDF) <i class="fas fa-link"></i></a></p>
-                  <i>und weitere Meetings</i>
+                  <i>und weitere Community-Events und MeetUps</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">2012 bis 2018</div></div>
