--- a/links/index.html
+++ b/links/index.html
@@ -33,7 +33,7 @@
         <div class="row justify-content-center align-self-center mt-3 text-center">
             <div class="col">
                 <h4>Dominik Höhr</h4><div class="w-100"></div>
-                <span>Student | DevOps @ CGI</span>
+                <span>Lead Consultant @ CGI</span>
             </div>
         </div>
         <div class="row justify-content-center align-self-center mt-3 text-center">
